adds a line about client library

--- a/root.tex
+++ b/root.tex
@@ -168,7 +168,7 @@ Based on my findings from the this research, I identified the following list of 
 \begin{itemize}
   \item \textbf{Extension to Support Complex Usage Scenarios.} Future research needs to be carried out to find techniques to automate the process of documenting usage scenarios that require multiple API calls to perform complex API tasks. Future research is also needed to investigate techniques for automatically cross-referencing API elements to allow API client developers with an improved navigation experience while reading the REST API documentation. In Chapter~\ref{chapter:controlled_study}, I discussed that the study participants faced obstacles with performing API tasks that required the use of multiple related API calls to reach a desired outcome. Future research needs to investigate techniques that can be used to provide links to related API elements and usage examples to allow API client developers with an alternative navigation experience.
   \item \textbf{Automated Changelog Generation.} For frequently evolving APIs, future research needs to extend the proposed technique in this thesis to automatically compute human readable changelogs and detect version compatibility to follow a semantic versioning scheme. This would help API client developers with an accurate information about the potential impact of an API update on their own application. In Chapter~\ref{chapter:case_study}, I discussed that REST APIs evolve frequently, often several times per month, and the change profiles contain different types of changes. I also provided a list of change patterns that I observed while studying the change profiles. In Chapter~\ref{chapter:cisco_study}, I discussed that manual effort was required to maintain the API changelog for the studied API. Future research needs to investigate automated changelog generation to help the evolution of REST APIs. The outcome of an automated changelog generation can be applied to automatically infer a semantic version of a REST API based on the inferred compatibility information.
-  \item \textbf{Automated API Client Code Generation.} Several tools exist that can convert custom REST API description files to API client code in multiple programming languages. Future research can be carried out to map the SpyREST data model with the custom API description languages to leverage the interception technique to reduce the amount of manual effort required to maintain the custom formatted API descriptions as the API evolves.
+  \item \textbf{Automated API Client Code Generation.} Several tools exist that can convert custom REST API description files to API client code in multiple programming languages. REST API client libraries help developers to leverage various IDE features such as code completion, and suggested data types for API elements. Future research can be carried out to map the SpyREST data model with the custom API description languages to leverage the interception technique to reduce the amount of manual effort required to maintain the custom formatted API descriptions as the API evolves.
   \item \textbf{Extensions of the Interception Based Documentation to non-REST APIs.} The proposed technique can be extended to document usage examples for other stateless APIs outside the realm of REST APIs. The structure of REST APIs are commonly documented using programming language features and formatted comments. Using formatted coments to provide API documentation with executable code examples requires manual effort since no automated feedback is available about the accuracy of the comments. API developers commonly write and maintain API test code that shows the intended way of using the APIs. The API test code provides automated feedback by means of test results. However, API test code may not be a substitute for API documentation. API test code may contain complex setup, tear-down, and verification logic that are not useful for documentation. Also, for closed source applications, organizations may not be able to publish their source code to external API client developers. The concept of intereception as described in Chapter~\ref{chapter:spy_rest} can be applied to other forms of API to generate and maintain API documenation by intercepting REST API tests. For example, several programming languages support concepts such as Aspect Oriented Programming, where custom code can be written to intercept API method calls, that can be used for API documentation. Future research can investigate the feasibility of leveraging the interception technique to source realistic usage examples for local stateless APIs from existing API test code.
 
 \end{itemize}
